raised new concerns and added starting functions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="new-task">
                         <input type="checkbox" class="new-task_checkbox">
                         <span class="new-task_title">Do The Laundry</span>
-                        <button type="button" class="remove-task btn">Delete</button>
+                        <button type="button" class="remove-task btn" onclick="deleteCurrTask()">Delete</button>
                     </div>
                 </li>
             </ul>
