--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>To Do List</title>
 </head>
 
@@ -18,17 +19,16 @@
 <body>
     <div class="app-wrapper">
         <div class="app">
+            <h1 class="app-title">Kujiama's To Do List</h1>
             <div class="input-task">
                 <input type="text" class="new-task-input" id="" placeholder="New task">
-                <button type="button" class="new-task btn" onclick="addNewTask()">+</button>
+                <button type="button" class="add-task-btn btn" onclick="addNewTask()">+</button>
             </div>
             <ul id="task-list">
-                <li class="new-task-wrapper">
-                    <div class="new-task">
-                        <input type="checkbox" class="new-task_checkbox" onchange="finishedTask(this)">
-                        <span class="new-task_title">Do The Laundry</span>
-                        <button type="button" class="remove-task btn" onclick="deleteCurrTask(this)">Delete</button>
-                    </div>
+                <li class="task-wrapper">
+                    <input type="checkbox" class="task-checkbox" onclick="finishedTask(this)">
+                    <h2 class="task-title">Do The Laundry</h2>
+                    <span class="remove-task btn" onclick="deleteCurrTask(this)"><i class="fa-solid fa-trash"></i></span>
                 </li>
             </ul>
             
