--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
     <title>To Do List</title>
 </head>
 
-<!-- 
-
-    What to fix visually: 
-    
-    1. Design of the app
-    2. Structure and class names of the app
- -->
-
 <body>
     <div class="app-wrapper">
         <div class="app">
             <h1 class="app-title">Kujiama's To Do List</h1>
             <div class="input-task">
                 <input type="text" class="new-task-input" id="" placeholder="New task">
-                <button type="button" class="add-task-btn btn" onclick="addNewTask()">+</button>
+                <span class="add-task-btn btn" onclick="addNewTask()"><i class="fa-solid fa-pen"></i></span>
             </div>
             <ul id="task-list">
                 <li class="task-wrapper">
